@@ -9,7 +9,7 @@ BEGIN {
 
 use Test::More;
 
-plan tests => 18;
+plan tests => 19;
 
 
 $Why = 'Just testing the todo interface.';
@@ -76,4 +76,14 @@ TODO: {
     is( $warning, "todo_skip() needs to know \$how_many tests are in the ".
                   "block at $0 line 82\n",
         'todo_skip without $how_many warning' );
+}
+
+
+{
+    Test::More->builder->exported_to("Wibble");
+    $Wibble::TODO = '';     # shut up used only once warning
+    TODO: {
+        local $Wibble::TODO = $Why;
+        fail("TODO honors exported_to()");
+    }
 }
